# contextseek

./: .env.example  .gitignore  Makefile  README.md  README_CN.md  pyproject.toml  restart-dev.sh
.github/workflows/: ci.yml  desktop.yml  release.yml
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  main.tsx  style.css
dashboard/src/lib/: ctxClient.ts  i18n.tsx  tauriDialog.ts  types.ts
dashboard/src/panels/: BrowsePanel.tsx  EnvVaultPanel.tsx  EvolutionPanel.tsx  IngressPanel.tsx  OverviewPanel.tsx  ProvenancePanel.tsx  RetrievePanel.tsx  SettingsPanel.tsx  SkillsPanel.tsx  WritePanel.tsx
desktop/tauri/: Dockerfile  package.json
desktop/tauri/src/: diagnostic.html  index.html
desktop/tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/icons/: README.md  icon.icns
desktop/tauri/src-tauri/src/: lib.rs  main.rs
docs/en/: README.md
docs/en/getting-started/: installation.md
docs/en/guides/: cli.md  storage.md
docs/en/reference/: settings.md
docs/superpowers/plans/: 2026-06-24-config-management.md
docs/superpowers/specs/: 2026-06-24-config-management-design.md
docs/zh/: README.md
docs/zh/getting-started/: installation.md
docs/zh/guides/: cli.md  storage.md
docs/zh/reference/: examples.md  settings.md
eval/: Makefile
eval/taubench/: README.md  tau2_compat.py
examples/: README.md  full_pipeline_file.py
examples/advanced/: README.md  evidence_chain.py  research_agent.py  self_evolution_demo.py
examples/basic/: README.md  langchain_deepagents_example.py
examples/gis/: README.md  autonomous_driving.py  gis_memory.py  poi_search.py  ride_hailing.py  smart_swap.py
scripts/: build_dashboard.sh  build_python_runtime.sh  desktop_in_docker.sh  package_desktop.sh  sync_version.py
src/contextseek/: __init__.py  scope.py
src/contextseek/bridges/: summarizer.py
src/contextseek/cli/: desktop.py  doctor.py  main.py  overview_renderer.py  ui.py
src/contextseek/client/: contextseek.py
src/contextseek/config/: __init__.py  agentseek_ingestor.py  cli.py  envreflector.py  factory.py  manager.py  mapping.py  materializer.py  migrator.py  runtime.py  settings.py  strategies.py
src/contextseek/daemon/: init_cmd.py  process.py  sync_cmd.py  watcher.py
src/contextseek/domain/: conflicts.py  context_item.py  geo.py  inference.py  provenance.py  results.py  serialization.py  skill_executor.py
src/contextseek/evolution/: __init__.py  conflict.py  distiller.py  dreaming.py  engine.py  extractor.py  lint.py  merger.py
src/contextseek/http/: __init__.py  config_routes.py  env_vault.py  seed.py  server.py
src/contextseek/ingestion/: __init__.py  _atomic.py  checkpoints.py  connector_store.py  control.py  dead_letter.py  models.py  registry.py  runtime.py  scheduler.py  writer.py
src/contextseek/mcp/: runtime.py  (+1 more)
tests/integration_tests/: test_contextseek_m1_m3_flow.py
tests/unit_tests/: test_cli.py  test_config_agentseek_ingestor.py  test_config_cli.py  test_config_envreflector.py  test_config_exports.py  test_config_http.py  test_config_manager.py  test_config_mapping.py  test_config_materializer.py  test_config_migrator.py  test_context_injection.py  test_desktop.py  test_doctor.py  test_dreaming.py  test_evolution.py  test_hierarchical.py  test_http_server.py  test_ingestion_v1.py  test_langchain_middleware.py  test_lint.py  test_mcp_runtime.py  test_pluggateway.py  test_powermem_download.py  test_powermem_plug.py  test_retrieval.py  test_scope.py  test_self_evolution.py  test_settings.py  test_skill_export.py
(+121 files in other folders)
