[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextseek"
version = "0.2.0"
description = "ContextSeek semantic context substrate for agent systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ContextSeek Team" }]
keywords = ["agent", "context", "memory", "rag", "llm", "provenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "certifi>=2024.2.2",
    "seekvfs>=0.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.10.0",
    "langchain-openai>=1.1.10",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/ob-labs/contextseek"
Repository = "https://github.com/ob-labs/contextseek"
Documentation = "https://github.com/ob-labs/contextseek/tree/main/docs"
Issues = "https://github.com/ob-labs/contextseek/issues"

[project.optional-dependencies]
test = ["pytest>=8.2.0"]
http = ["fastapi>=0.110.0", "uvicorn>=0.30.0", "pydantic>=2.7.0"]
langchain = ["langchain-core>=0.3.0", "langchain>=0.3.0", "langgraph>=0.2.0", "langsmith>=0.1.0"]
openai = ["langchain-openai>=0.3.0"]
dashscope = ["langchain-community>=0.3.0", "dashscope>=1.20.0"]
ollama = ["langchain-ollama>=0.3.0"]
huggingface = ["langchain-huggingface>=0.1.0"]
oceanbase = ["pyobvector>=0.1.0", "sqlalchemy>=2.0"]
daemon = ["watchdog>=4.0"]
seekdb = ["pyseekdb"]
powermem = ["powermem>=1.1.1"]
all = [
    "fastapi>=0.110.0", "uvicorn>=0.30.0", "pydantic>=2.7.0",
    "langchain-core>=0.3.0", "langchain>=0.3.0", "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0", "dashscope>=1.20.0",
    "watchdog>=4.0",
    "pyseekdb",
]
appworld-eval = ["openai>=1.0.0", "anthropic>=0.30.0"]

[project.scripts]
contextseek = "contextseek.cli:main"
contextseek-mcp-stdio = "contextseek.mcp:run_stdio_server"
contextseek-mcp-sse = "contextseek.mcp:run_sse_server"
contextseek-pmem-proxy = "contextseek.plugs.powermem.cli:main"
contextseek-pmem-mcp-stdio = "contextseek.plugs.powermem.mcp:run_stdio_server"

[tool.hatch.build.targets.wheel]
packages = ["src/contextseek"]

[tool.pytest.ini_options]
pythonpath = ["src", "examples"]
testpaths = ["tests"]
markers = [
    "langchain: LangChain agent middleware stack (optional extra)",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.26",
    "pytest>=9.0.3",
    "ruff>=0.4.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "powermem" },
        { group = "dev" },
    ],
]
