[package]
name = "contextseek-desktop"
version = "0.2.0"
description = "ContextSeek Desktop"
authors = ["ContextSeek"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "contextseek_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[features]
# By default Tauri runs in production mode.
# Use `tauri dev` for development.
custom-protocol = ["tauri/custom-protocol"]
